--- a/web110/style.css
+++ b/web110/style.css
@@ -1,17 +1,17 @@
-#body {
+body {
     background-color: #D71B1B;
 }
 
-#h1 {
+h1 {
     color: white;
 }
 
-#p {
+p {
     text-align: center;
     color: white;
     font-size: 14px;
 }
 
-#ul {
+ul {
     font-weight: bold;
 }
